--- a/src/main/resources/templates/manageRole.html
+++ b/src/main/resources/templates/manageRole.html
@@ -45,7 +45,7 @@
 					<div class="col-md-6">
 						<div class="panel panel-info">
 							<div class="panel-heading">
-								<h3>Outgoing</h3>
+								<h3>Set Role</h3>
 							</div>
 							<div class="panel-body">
 								<form action="#" th:action="@{/admin/updateRole}"
